<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".UI.setting.fragment.KoperasiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:background="@drawable/view_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/back_button"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Ubah Koperasi"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/img_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="44dp"
        android:paddingEnd="44dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="3"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:layout_marginTop="23dp"
            android:text="@string/text_ubah_koperasi"/>

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_round"
            android:hint="@string/nama"
            android:backgroundTint="@color/grey_input"
            android:textColorHint="#B3000000"
            android:fontFamily="@font/montserrat"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry"
            android:layout_marginTop="24dp"
            android:paddingStart="11dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_round"
            android:hint="@string/email"
            android:textColorHint="#B3000000"
            android:backgroundTint="@color/grey_input"
            android:fontFamily="@font/montserrat"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry"
            android:layout_marginTop="11dp"
            android:paddingStart="11dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/edt_koperasi_sekarangl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_round"
            android:hint="Koperasi Aaat Ini"
            android:textColorHint="#B3000000"
            android:fontFamily="@font/montserrat"
            android:backgroundTint="@color/grey_input"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry"
            android:layout_marginTop="11dp"
            android:paddingStart="11dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edt_koperasi_tujuan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_round"
            android:hint="Koperasi Tujuan"
            android:textColorHint="#B3000000"
            android:backgroundTint="@color/grey_input"
            android:fontFamily="@font/montserrat"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry"
            android:layout_marginTop="11dp"
            android:paddingStart="11dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/input_round"
            android:hint="Kata Sandi"
            android:textColorHint="#B3000000"
            android:backgroundTint="@color/grey_input"
            android:fontFamily="@font/montserrat"
            android:textSize="12sp"
            tools:ignore="RtlSymmetry"
            android:layout_marginTop="11dp"
            android:paddingStart="11dp"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/btn_ubah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_gravity="center"
            android:text="Ubah Koperasi"
            android:background="@drawable/button_ubah_koperasi"/>

    </LinearLayout>

</LinearLayout>